<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_final"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ar.instafotoapp.Instrucciones" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instruccionesTexto2"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/paso2"
        tools:ignore="RtlHardcoded,HardcodedText" />

    <TextView
        android:id="@+id/instruccionesTexto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/copia_la_url"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instruccionesTexto1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/paso1" />

    <TextView
        android:id="@+id/instruccionesTexto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginBottom="5dp"
        android:text="@string/abre_el_link"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/instruccionesTexto5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/instruccionesTexto4"
        android:layout_centerHorizontal="true"
        android:text="@string/bot_n_para_descargar"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/instruccionesTexto4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/instruccionesTexto3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/bot_n_para_obtener"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/instruccionesTexto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/pega_la_url"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/paso3" />

</RelativeLayout>